kubernetes/skywalker/application/mealie/mealie.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: mealie

spec:
  gateways:
    - istio-system/feldman-tech
  hosts:
    - mealie.feldman.tech
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: mealie
            port:
              number: 9000
